# finalunlock-rust

./: Cargo.toml  README.md  create_db.sh  env.example  init_db.sql  start.sh
src/: bot.rs  config.rs  database.rs  finalshell.rs  guard.rs  main.rs  models.rs  utils.rs
